[project]
name = "wanglib"
version = "0.1.0"
description = "机器狗的Python前置包！"
authors = [
    {name = "machinacanis", email = "hf4minecraft@163.com"},
]
dependencies = ["loguru>=0.7.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120  # 代码最大行宽
select = [         # 选择的规则
    "F",
    "E",
    "W",
    "UP",
]
ignore = ["F401"]  # 忽略的规则